--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@charset "Shift_JIS";
+@charset "UTF-8";
 
-/* 基本設定 */
+
 
 .center
 {
@@ -9,9 +9,10 @@
 	text-align:center;
 }
 
-body
-{
-	font-size:100%;
+
+body{
+   font-family: "Courier New";
+   font-size:100%;
 }
 
 .strong
