--- a/top.css
+++ b/top.css
@@ -1,74 +1,19 @@
 /* Šî–{Ý’è */
 body
 {
-	background-color:#22eecc;
-	color:#000000;
+	background-color:#00bfff;
+	
 }
 
-/* ‰æ‘œ */
-.title
-{
-	width:426px;
-	height:auto;
-}
 
-.banner
-{
-	width:200px;
-	height:auto;
-}
-
-/* XVî•ñ */
 .table_update td#railway
 {
-	background-color:#ff9400;
+	background-color:#4682b4;
 	color:#ffffff;
 	white-space:nowrap;
 }
 
-.table_update td#music
-{
-	background-color:#ff6b00;
-	color:#ffffff;
-	white-space:nowrap;
-}
 
-.table_update td#computer
-{
-	background-color:#ff00ad;
-	color:#ffffff;
-	white-space:nowrap;
-}
-
-.table_update td#tenji
-{
-	background-color:#ff21df;
-	color:#ffffff;
-	white-space:nowrap;
-}
-
-.table_update td#staff
-{
-	background-color:#b500ff;
-	color:#ffffff;
-	white-space:nowrap;
-}
-
-.table_update td#link
-{
-	background-color:#5030ff;
-	color:#ffffff;
-	white-space:nowrap;
-}
-
-.table_update td#top
-{
-	background-color:#00b9aa;
-	color:#ffffff;
-	white-space:nowrap;
-}
-
-/* ƒƒjƒ…[ */
 .table_menu a:link
 {
 	color:#000000;
@@ -84,45 +29,6 @@ body
 	background-color:#ffddbb;
 }
 
-.table_menu tr#music
-{
-	background-color:#ffccaa;
-}
-
-.table_menu tr#computer
-{
-	background-color:#ffbbff;
-}
-
-.table_menu tr#tenji
-{
-	background-color:#ffccff;
-}
-
-.table_menu tr#staff
-{
-	background-color:#eeddff;
-}
-
-.table_menu tr#link
-{
-	background-color:#ccddff;
-}
-
-.table_menu tr#blog
-{
-	background-color:#99ddff;
-}
-
-.table_menu tr#movie
-{
-	background-color:#66eeff;
-}
-
-.table_menu tr#twitter
-{
-	background-color:#77ffff;
-}
 
 .table_menu td
 {
@@ -141,53 +47,6 @@ body
 	width:4px;
 }
 
-.table_menu td#music
-{
-	background-color:#ff6b00;
-	width:4px;
-}
-
-.table_menu td#computer
-{
-	background-color:#ff00ad;
-	width:4px;
-}
-
-.table_menu td#tenji
-{
-	background-color:#ff21df;
-	width:4px;
-}
-
-.table_menu td#staff
-{
-	background-color:#b500ff;
-	width:4px;
-}
-
-.table_menu td#link
-{
-	background-color:#5030ff;
-	width:4px;
-}
-
-.table_menu td#blog
-{
-	background-color:#2050ff;
-	width:4px;
-}
-
-.table_menu td#movie
-{
-	background-color:#0070ff;
-	width:4px;
-}
-
-.table_menu td#twitter
-{
-	background-color:#00a0ff;
-	width:4px;
-}
 
 .table_menu td#menu
 {
@@ -195,21 +54,3 @@ body
 	white-space:nowrap;
 }
 
-@media screen and (max-width:479px)
-{
-	.title
-	{
-		width:213px;
-	}
-
-	.table_menu td
-	{
-		padding-left:8px;
-	}
-
-	.banner
-	{
-		width:100px;
-		height:auto;
-	}
-}
