--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 {
 	font-family: "Courier New";
 	font-size:100%;
-	background-color:DeepSkyBlue;
+  	background-image: "diamond_plate_small.jpg";
 }
 
 	/ footer /
