--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
 {
 	font-family: "Courier New";
 	font-size:100%;
-  	background-image: url('diamond_plate_small.jpg');
+  	background-color:DeepSkyBlue;
 }
 
 	/ footer /
